--- a/jupyter/udacity statistics.ipynb
+++ b/jupyter/udacity statistics.ipynb
@@ -272,6 +272,151 @@
     "\n",
     "margin"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Keyboard errors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(5.0800000000000001, 7.7999999999999998)"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "qwerty_errors = [6, 6, 2, 7, 8, 8, 2, 3, 5, 7, 10, 5, 4, 7, 5, 7, 4, 5, 2, 5, 3, 4, 4, 4, 4]\n",
+    "alphabetical_errors = [6, 11, 8, 5, 11, 8, 10, 7, 4, 3, 7, 6, 10, 10, 6, 5, 10, 11, 13, 8, 5, 11, 7, 8, 5]\n",
+    "\n",
+    "qw_mean = np.mean(qwerty_errors)\n",
+    "al_mean = np.mean(alphabetical_errors)\n",
+    "\n",
+    "qw_mean, al_mean"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-2.7199999999999998"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "point_estimate = qw_mean - al_mean\n",
+    "\n",
+    "point_estimate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.6914315199752337"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "differences = np.array(qwerty_errors) - np.array(alphabetical_errors)\n",
+    "s = np.std(differences, ddof=1)\n",
+    "\n",
+    "s"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-3.6842075835369266"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t = point_estimate / (s / np.sqrt(len(differences)))\n",
+    "t"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-0.73684151670738529"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cohen_d = point_estimate / s\n",
+    "cohen_d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(-4.2438229314457772, -1.1961770685542237)"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "se = s / np.sqrt(len(differences))\n",
+    "mean_d = np.mean(differences)\n",
+    "t_crit = 2.064\n",
+    "\n",
+    "conf_interv = (mean_d - t_crit * se, mean_d + t_crit * se)\n",
+    "conf_interv"
+   ]
   }
  ],
  "metadata": {
