udacity stats food prices

--- a/jupyter/udacity/Formulas.ipynb
+++ b/jupyter/udacity/Formulas.ipynb
@@ -56,6 +56,13 @@
     "r^2\n",
     "$$r^2 = \\frac{t^2}{t^2 + df}\\\\$$"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[t-table](https://s3.amazonaws.com/udacity-hosted-downloads/t-table.jpg)"
+   ]
   }
  ],
  "metadata": {
