udacity stats lesson11

--- a/jupyter/udacity/t-Test, Part3.ipynb
+++ b/jupyter/udacity/t-Test, Part3.ipynb
@@ -932,6 +932,91 @@
    "source": [
     "This means only about 5% of the difference in pairs of shoes owned is **due to gender**. The remaining 95% can be explained by **something else** (eg. type of personality)."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Pooled variance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$$s_p^2 = \\frac{ss_1 + ss_2}{df_1 + df_2}$$\n",
+       "\n",
+       "ss - sum of squares\n",
+       "$$ss = \\Sigma(x_i - \\bar{x})^2$$"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Latex object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%%latex\n",
+    "$$s_p^2 = \\frac{ss_1 + ss_2}{df_1 + df_2}$$\n",
+    "\n",
+    "ss - sum of squares\n",
+    "$$ss = \\Sigma(x_i - \\bar{x})^2$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "15.2"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ss_x = 62\n",
+    "ss_y = 14\n",
+    "df_x = 3\n",
+    "df_y = 2\n",
+    "sp2 = (ss_x + ss_y) / (df_x + df_y)\n",
+    "sp2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.9776948578836393"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# standard error using pooled variance\n",
+    "nx = 4\n",
+    "ny = 3\n",
+    "sem = np.sqrt(sp2/nx + sp2/ny)\n",
+    "sem"
+   ]
   }
  ],
  "metadata": {
@@ -950,7 +1035,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
