--- a/jupyter/udacity/Formulas.ipynb
+++ b/jupyter/udacity/Formulas.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -25,7 +25,16 @@
        "$$d = \\frac{\\bar{x} - \\mu}{s}\\\\$$\n",
        "\n",
        "r^2\n",
-       "$$r^2 = \\frac{t^2}{t^2 + df}\\\\$$"
+       "$$r^2 = \\frac{t^2}{t^2 + df}\\\\$$\n",
+       "\n",
+       "Pooled variance\n",
+       "$$s_p^2 = \\frac{ss_1 + ss_2}{df_1 + df_2}\\\\$$\n",
+       "\n",
+       "ss - sum of squares\n",
+       "$$ss = \\Sigma(x_i - \\bar{x})^2\\\\$$\n",
+       "\n",
+       "Standard error (from pooled variance)\n",
+       "$$SE = \\sqrt{\\frac{s_p^2}{n_1} + \\frac{s_p^2}{n_2}}\\\\$$"
       ],
       "text/plain": [
        "<IPython.core.display.Latex object>"
@@ -54,7 +63,16 @@
     "$$d = \\frac{\\bar{x} - \\mu}{s}\\\\$$\n",
     "\n",
     "r^2\n",
-    "$$r^2 = \\frac{t^2}{t^2 + df}\\\\$$"
+    "$$r^2 = \\frac{t^2}{t^2 + df}\\\\$$\n",
+    "\n",
+    "Pooled variance\n",
+    "$$s_p^2 = \\frac{ss_1 + ss_2}{df_1 + df_2}\\\\$$\n",
+    "\n",
+    "ss - sum of squares\n",
+    "$$ss = \\Sigma(x_i - \\bar{x})^2\\\\$$\n",
+    "\n",
+    "Standard error (from pooled variance)\n",
+    "$$SE = \\sqrt{\\frac{s_p^2}{n_1} + \\frac{s_p^2}{n_2}}\\\\$$"
    ]
   },
   {
@@ -81,7 +99,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
