correlation lesson finished

--- a/jupyter/udacity/16. Correlation.ipynb
+++ b/jupyter/udacity/16. Correlation.ipynb
@@ -1023,6 +1023,137 @@
     "data.plot.scatter(x='age', y='party')\n",
     "data.plot.scatter(x='age', y='pets')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>age</th>\n",
+       "      <th>party</th>\n",
+       "      <th>pets</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>age</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>-0.164214</td>\n",
+       "      <td>0.375765</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>party</th>\n",
+       "      <td>-0.164214</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>-0.047704</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>pets</th>\n",
+       "      <td>0.375765</td>\n",
+       "      <td>-0.047704</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            age     party      pets\n",
+       "age    1.000000 -0.164214  0.375765\n",
+       "party -0.164214  1.000000 -0.047704\n",
+       "pets   0.375765 -0.047704  1.000000"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# correlations\n",
+    "data[['age', 'party', 'pets']].corr()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>age</th>\n",
+       "      <th>pets</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>age</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.231481</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>pets</th>\n",
+       "      <td>0.231481</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           age      pets\n",
+       "age   1.000000  0.231481\n",
+       "pets  0.231481  1.000000"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data[['age', 'pets']].append({'age': 20, 'pets': 8}, ignore_index=True).corr()"
+   ]
   }
  ],
  "metadata": {
